[package]
name = "yrs-table-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
yrs = { version = "0.21", features = ["sync"] }
csv = "1.3.0"
fastrand = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
zstd = "0.13.2"
loro = { git = "https://github.com/loro-dev/loro.git", tag = "loro-crdt@1.0.0-beta.1", package = "loro", features = ["counter"] }
anyhow = "1.0.89"


[profile.release]
debug = true
